--- a/tools/android/KSPConfig/res/layout/main.xml
+++ b/tools/android/KSPConfig/res/layout/main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/main_view"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
@@ -14,12 +15,12 @@
 			/>
 
 	<LinearLayout android:id="@+id/current_config_box"
-			android:background="@android:drawable/dialog_frame"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:orientation="vertical"
-			android:layout_gravity="center"
-			android:visibility="gone"
+	              android:background="@android:drawable/dialog_frame"
+	              android:layout_width="fill_parent"
+	              android:layout_height="wrap_content"
+	              android:orientation="vertical"
+	              android:layout_gravity="center"
+	              android:visibility="gone"
 			>
 		<TextView android:id="@+id/current_config"
 		          android:layout_width="fill_parent"
