--- a/tools/android/KSPConfig/res/menu/main_menu.xml
+++ b/tools/android/KSPConfig/res/menu/main_menu.xml
@@ -3,5 +3,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/reload_configuration"
 	      android:title="Reload Configuration"
+	      android:icon="@android:drawable/ic_menu_revert"
 			/>
 </menu>
